_scss/_highlights.scss
/* Syntax highlighting */

@mixin _highlight_common() {
  background-color: #FAFAFA;
  padding: 7px 7px 7px 10px;
  border: 1px solid #ddd;
  margin: 20px 0 20px 0;
  font-family: $font-mono;
  width: 100%;
  // Need display: block; for scrollbars to appear.
  display: block;
  overflow: auto;
}

.highlight {
  @include _highlight_common;

  .lineno {
    color: #ccc;
    display: inline-block;
    padding: 0 5px;
    border-right: 1px solid #ccc;

    @include user-unselectable;
  }
}

figure.code {
  margin: 20px 0 20px 0;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.06);

  figcaption {
    padding: 2px;
    border: 1px solid #ddd;
    border-bottom: 0px;
    width: 100%;
    text-align: center;
    color: #777;
    background: linear-gradient(#FFF, #F0F0F0 6%, #E5E5E5 90%, #DDD);
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
  }
}

// Table based code highlight
.highlighttable {
  @include _highlight_common;
  border: 1px solid #ddd;
  border-collapse: collapse;
  padding: 0px;
  margin: 0px;

  .highlight {
    border:none;
    outline:none;
    margin: 0px;
    width: 100%;
  }

  .linenos {
    color: #ccc;
    background: #fff;
    padding: 0 5px;
    border-right: 1px solid #ccc;
    vertical-align: middle;
    text-align: right;
    min-width: 2em;

    @include user-unselectable;
  }
}

.highlight {
   // Syntax Highlight
    .c     { color: #998; } // Comment
    .err   { color: #a61717; background-color: #e3d2d2 } // Error
    .k     { font-weight: bold } // Keyword
    .o     { font-weight: bold } // Operator
    .cm    { color: #998; } // Comment.Multiline
    .cp    { color: #999; font-weight: bold } // Comment.Preproc
    .c1    { color: #998; } // Comment.Single
    .cs    { color: #999; font-weight: bold; } // Comment.Special
    .gd    { color: #000; background-color: #fdd } // Generic.Deleted
    .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
    .ge    { font-style: italic } // Generic.Emph
    .gr    { color: #a00 } // Generic.Error
    .gh    { color: #999 } // Generic.Heading
    .gi    { color: #000; background-color: #dfd } // Generic.Inserted
    .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
    .go    { color: #888 } // Generic.Output
    .gp    { color: #555 } // Generic.Prompt
    .gs    { font-weight: bold } // Generic.Strong
    .gu    { color: #aaa } // Generic.Subheading
    .gt    { color: #a00 } // Generic.Traceback
    .kc    { font-weight: bold } // Keyword.Constant
    .kd    { font-weight: bold } // Keyword.Declaration
    .kp    { font-weight: bold } // Keyword.Pseudo
    .kr    { font-weight: bold } // Keyword.Reserved
    .kt    { color: #458; font-weight: bold } // Keyword.Type
    .m     { color: #099 } // Literal.Number
    .s     { color: #d14 } // Literal.String
    .na    { color: #008080 } // Name.Attribute
    .nb    { color: #0086B3 } // Name.Builtin
    .nc    { color: #458; font-weight: bold } // Name.Class
    .no    { color: #008080 } // Name.Constant
    .ni    { color: #800080 } // Name.Entity
    .ne    { color: #900; font-weight: bold } // Name.Exception
    .nf    { color: #900; font-weight: bold } // Name.Function
    .nn    { color: #555 } // Name.Namespace
    .nt    { color: #000080 } // Name.Tag
    .nv    { color: #008080 } // Name.Variable
    .ow    { font-weight: bold } // Operator.Word
    .w     { color: #bbb } // Text.Whitespace
    .mf    { color: #099 } // Literal.Number.Float
    .mh    { color: #099 } // Literal.Number.Hex
    .mi    { color: #099 } // Literal.Number.Integer
    .mo    { color: #099 } // Literal.Number.Oct
    .sb    { color: #d14 } // Literal.String.Backtick
    .sc    { color: #d14 } // Literal.String.Char
    .sd    { color: #d14 } // Literal.String.Doc
    .s2    { color: #d14 } // Literal.String.Double
    .se    { color: #d14 } // Literal.String.Escape
    .sh    { color: #d14 } // Literal.String.Heredoc
    .si    { color: #d14 } // Literal.String.Interpol
    .sx    { color: #d14 } // Literal.String.Other
    .sr    { color: #009926 } // Literal.String.Regex
    .s1    { color: #d14 } // Literal.String.Single
    .ss    { color: #990073 } // Literal.String.Symbol
    .bp    { color: #999 } // Name.Builtin.Pseudo
    .vc    { color: #008080 } // Name.Variable.Class
    .vg    { color: #008080 } // Name.Variable.Global
    .vi    { color: #008080 } // Name.Variable.Instance
    .il    { color: #099 } // Literal.Number.Integer.Long
}

